staging/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-java-game-price-comparator-staging-deployment
  labels:
    app: be-java-game-price-comparator-staging
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: be-java-game-price-comparator-staging
  template:
    metadata:
      labels:
        app: be-java-game-price-comparator-staging
    spec:
      automountServiceAccountToken: false
      containers:
        - name: be-java-game-price-comparator-staging
          resources:
            limits:
              cpu: "0.7"
          image: 'docker.io/kkkira/game-price-comparator:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: be-java-game-price-comparator-staging-service
spec:
  type: LoadBalancer
  selector:
    app: be-java-game-price-comparator-staging
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
